--- a/classes/AppleWatch.cls
+++ b/classes/AppleWatch.cls
@@ -8,10 +8,7 @@ Public with sharing Class AppleWatch{
         t.WhatId      = opp.Id;
         insert t;
      /*Commit conflict1 Mod in Source and feature branch*/
-     /*Commit conflict2*/
-     
+     /*Test8*/
    }
-  
   }
- 
  }
