--- a/classes/AppleWatch.cls
+++ b/classes/AppleWatch.cls
@@ -4,14 +4,11 @@ Public with sharing Class AppleWatch{
         Task t        = new Task();
         t.Subject     = 'Apple Watch Promo' ;
         t.Description = 'Send them one ASAP' ;
-        t.Priority    = 'High';
+        t.Priority    = 'High' ;
         t.WhatId      = opp.Id;
         insert t;
-     /*Commit conflict*/
-     /*Comment Number 2*/ 
-     
+     /*Comment 1*/
+     /*Comment 4*/
    }
-  
   }
- 
  }
