--- a/classes/spm_myType101.cls
+++ b/classes/spm_myType101.cls
@@ -10,6 +10,7 @@ public with sharing class spm_myType101 {
 
     /**Rebase test - changes in Dev1 to generate conflict**/
     /**___CONFLICT_1___**/
+    /**Rollback test2**/
 
     public static Account setDefaultBillingAddress(Account a){
         a.billingstreet = 'Basauri, 6'; 
