--- a/classes/spm_myType100.cls
+++ b/classes/spm_myType100.cls
@@ -8,7 +8,7 @@ public with sharing class spm_myType100 {
         }
     }
 
-    /**___CONFLICT_1___**/
+    /**___CONFLICT_1___ - Dev 1 change**/
     /**Rollback test**/
 
     public static Account setDefaultBillingAddress(Account a){
